# cargo-makepkg

./: Cargo.toml  README.md
src/: main.rs
src/config/: arch.rs  core.rs  meta.rs  mod.rs
