[package]
name = "cargo-pkgbuild"
version = "0.1.0"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>", "Brandon Milton <brandon.milton21@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
description = "Build ArchLinux packages with Cargo"
repository = "https://github.com/brandonio21/cargo-makepkg"
keywords = ["cargo", "package"]

[dependencies]
serde = "1.0.33"
serde_derive = "1.0.33"
serde_json = "1.0.11"
toml = "0.4.5"

[package.metadata.arch]
arch = ["x86_64"]

[profile.release]
lto = true
